--- a/about-us.html
+++ b/about-us.html
@@ -56,9 +56,7 @@
 												<li><a href="https://neidahobeekeepers.org/">Local Beekeeper Association</a></li>
 												<li><a href="https://scientificbeekeeping.com/">Useful Info</a></li>
 											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
+											
 										</section>
 
 								</div>
@@ -142,7 +140,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<h3>Get In Touch</h3>
-								<form id="my-form" action="https://formspree.io/f/mqkrovpv" method="POST">
+								<form id="my-form" action="https://formspree.io/f/mleqqwkp" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
 											<input type="text" name="name" id="name" placeholder="Name" />
