--- a/honeypurchase.html
+++ b/honeypurchase.html
@@ -50,7 +50,7 @@
 
 								<section class="col-6 col-12-narrower">
 								<h3>Purchase Your Honey Here!</h3>
-								<form id="my-form" action="https://formspree.io/f/mqkrovpv" method="POST">
+								<form id="my-form" action="https://formspree.io/f/mqkrrdod" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -97,7 +97,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<h3>Get In Touch</h3>
-								<form id="my-form" action="https://formspree.io/f/mqkrovpv" method="POST">
+								<form id="my-form" action="https://formspree.io/f/mleqqwkp" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
 											<input type="text" name="name" id="name" placeholder="Name" />
