--- a/Shopping.html
+++ b/Shopping.html
@@ -48,7 +48,7 @@
 
 							<!-- Content -->
 
-								<section id='shop'>
+								<section  id='shop'>
 									<section  class='purchase'>
 										<h2>Honey</h2>
 										<img  class = "honey" src="images/honey-jar.jpg" alt='A Jar of Honey'>
@@ -103,7 +103,7 @@
 									</div>
 								</form>
 							</section>
-							<section class="colonel col-12-mobilep col-12-mobilep">
+							<section class="colonel  col-12-mobilep">
 									<img class = 'logoPics'src='images/heroestohives.png' alt='Heroes to Hives'>
 									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
 							</section>
@@ -123,7 +123,7 @@
 						</div>
 
 				</div>
-
+			</div>
 		</div>
 
 		<!-- Scripts -->
